--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shoelace-style/shoelace": "^2.0.0-beta.81",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
